<resources>
    <string name="app_name">Twoje zapotrzebowanie energetyczne</string>
    <string name="gender_text_string">PO PROSTU wybierz płeć!</string>
    <string name="demand_string">%1$d kcal</string>
    <string name="title_activity_history_check">Historia Wyników</string>
    <!-- Strings used for fragments for navigation -->
    <string name="next">Next</string>
<!--    buttons -->
    <string name="zapisz_button">Zapisz</string>
    <string name="nowy_user_button">Nowy użytkownik</string>
    <string name="add_button">Dodaj</string>
    <string name="history_button">Historia</string>
    <string name="previous">Previous</string>
<!--    calculator strings-->
    <string name="calc_title">Po prostu wpisz swoje dane!</string>
    <string name="masa_calc">Masa [kg]</string>
    <string name="wzrost_calc">Wzrost [cm]</string>
    <string name="Zapotrzebowanie_calc">Zapotrzebowanie</string>
<!--    table historia-->
    <string name="colname_data">Data</string>
    <string name="colname_bmi">BMI</string>
<!--nowy user labels-->
    <string name="man">Meżczyzna</string>
    <string name="wom">Kobieta</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>
